--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,4 +15,5 @@ jobs:
         with:
           node-version: "16"
       - run: npm install
+      - run: npm install react-scripts --prefix client
       - run: npm run build --prefix client
