--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version ${{matrix.node-version}}
+      - name: Use Node.js version 16
         uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node-version}}
