--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "jest --watch --detectOpenHandles",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
