--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,5 +21,6 @@ jobs:
           node-version: ${{matrix.node-version}}
       - run: npm install
       - run: npm install react-scripts --prefix client
+      - run: npm install jest --prefix server --save-dev
       - run: npm run build --prefix client
       - run: npm test
