--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "client": "npm run start --prefix client",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "deploy": "npm run build --prefix client && npm start --prefix server",
-    "test": "npm test --prefix server && npm test --prefix client",
-    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server"
+    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
+    "test": "npm test --prefix server && npm test --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -18,3 +18,4 @@
     "mongoose": "^8.3.2"
   }
 }
+
