--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
+    "test-watch": "jest --watch",
     "start": "nodemon src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
@@ -27,3 +28,4 @@
     "supertest": "^6.3.4"
   }
 }
+
