--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,16 +9,22 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/nasa
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-    runs-on: ubuntu-latest
+        mongodb-version: ["4.4"]
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js version 16
         uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node-version}}
+      - name: Use MongoDB from github Actions
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ${{matrix.mongodb-version}}
       - run: npm install
       - run: npm install react-scripts --prefix client
       - run: npm install jest --prefix server --save-dev
